@@ -1,7 +1,7 @@
 {
   "name": "@massimo-cassandro/js-utilities",
   "description": "My collection of js utilities",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "license": "MIT",
   "author": "Massimo Cassandro",
   "main": "index.js",
